--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +25,7 @@
     "build:app": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "convert": "node scripts/convert"
+    "convert": "ts-node scripts/convert"
   },
   "eslintConfig": {
     "extends": [
